# equity-intel-mcp

./: .env.example  BITACORA.md  PLAN_SONNET.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
equity_intel_mcp/: __init__.py  __main__.py  analyze.py  cache.py  formatting.py  server.py  signal.py
equity_intel_mcp/sources/: __init__.py  analysts.py  insider.py  options.py  quote.py  superinvestor.py  valuation.py
evals/: README.md  equity_intel_eval.xml
tests/: test_composite.py  test_smoke.py
