[project]
name = "equity-intel-mcp"
version = "0.1.0"
description = "Institutional-grade equity analysis (insider, superinvestor, valuation) over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "edgartools>=4.0",
    "pandas>=2.0",
]

[project.scripts]
equity-intel-mcp = "equity_intel_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["equity_intel_mcp*"]
